--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
 	<title>Login SDK</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.9&appId=118744895324846";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+
 	<h1>Login con facebook</h1>
 
 	<fb:login-button 
 	  scope="public_profile,email"
 	  onlogin="checkLoginState();">
 	</fb:login-button>
-	
+
 	<script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
