--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.9&appId=118744895324846";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+
+
+
 
 	<h1>Login con facebook</h1>
 
@@ -22,6 +24,10 @@
 	  scope="public_profile,email"
 	  onlogin="checkLoginState();">
 	</fb:login-button>
+
+	<h1>Hola</h1>
+
+	<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
 
 	<script>
 	  window.fbAsyncInit = function() {
